--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ jobs:
     - &run_tests
       # Template; subsequent uses modify 'env'
       env:
-        - OS_TYPE=centos OS_VERSION=7 BUILD_ENV=osg
+        - OS_TYPE=centos OS_VERSION=7 BUILD_ENV=build
       sudo: required
       services:
         - docker
@@ -19,7 +19,7 @@ jobs:
         - build-docket-travis.sh
     - <<: *run_tests
       env:
-        - OS_TYPE=centos OS_VERSION=7 BUILD_ENV=uw_build
+        - OS_TYPE=centos OS_VERSION=7 BUILD_ENV=deploy
       deploy:
         - provider: script
           skip_cleanup: true
