New commands for Travis debugging

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,8 @@ jobs:
         - sleep 5
         - sudo docker pull centos:centos${OS_VERSION}
       script:
-        - build-docker-travis.sh
+        - ls -l
+        - ./build-docker-travis.sh
     - <<: *run_tests
       env:
         - OS_TYPE=centos OS_VERSION=7 BUILD_ENV=deploy
